add nav and main section to html page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Document</title>
+    <title>Bandsite</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class = "header-title">BANDSITE</h1>
+        <nav class = "navbar">
+            <ul class = "navbar__list">
+                <li class = "navbar__item">
+                    <a class = "navbar__link" href = "./styles/bio.css">Biography</a>
+                </li>
+                <li>
+                    <a class = "navbar__link" href = "">Shows</a>
+                </li>
+            </ul>
+        </nav>
+        <div class = "hero-logo">
+            <h2 class = "hero-title">The Bees Knees</h2>
+        </div>
+    </header>
+    <main>
+        <section class = "about-quote">
+            <h2 class = "about-quote__title">About the Musicians</h2>
+            <img class = "about-quote__image" src = "./assets/images/band.jpg">
+            <p class = "about-quote__by-vocalist">"We push each other to be the best.
+                It's not uncommon for one of us to say 'this needs to be better,
+                back to the drawing board'"
+            </p>
+            <p class = "about-quote__vocalist-name">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+        </section>
+        <article class = "about-musicians">
+            <h3 class = "about-musicians__title">The Bees Knees</h3>
+            <p class = "about-musicians__paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. 
+                The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
+                bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, 
+                drawing attention from manager Cam Adams. Having worked with other popular acts 
+                (The Elephant In The Room, One Trick Pony, The Cat's Meow), Adams was confident the band could succeed even further, 
+                pushing them to sign with Magenta Records.
+            </p>
+            <p class = "about-musicians__paragraph__two">From there, the band has soared, 
+                gaining international recognition and ranking in the top 10 on the Poster Charts. 
+                New fans immediately fell in love with the band's original and organic attitude, 
+                solidifying their place as one of the hottest and fastest up and coming acts of this century. 
+                Fans affectionately refer to themselves as "The Hive" and are drawn to their candid and authentic performances on stage. 
+                Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, 
+                looking to be released in late 2021.
+            </p>
+        </article>
+        <section class = "gallery-section">
+            <h2 class = "gallery-section__title">Photo Gallery</h2>
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-1.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-2.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-3.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-4.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-5.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-6.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-7.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-8.jpg">
+            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-9.jpg">
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
