add header scss

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class = "navbar">
             <ul class = "navbar__list">
                 <li class = "navbar__item">
-                    <a class = "navbar__link" href = "./styles/bio.css">Biography</a>
+                    <a class = "navbar__link--active navbar__link" href = "./index.html">Biography</a>
                 </li>
                 <li>
                     <a class = "navbar__link" href = "">Shows</a>
