add font family and navbar responsive breakpoints

--- a/index.html
+++ b/index.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/bio.css">
     <title>Bandsite</title>
 </head>
 <body>
     <header>
-        <h1 class = "header-title">BANDSITE</h1>
         <nav class = "navbar">
+            <div class = "navbar__title-container">
+                <a href = "./index.html"><img src = "./assets/logos/Logo-bandsite.svg" alt = "bandsite logo"></a>
+            </div>
             <ul class = "navbar__list">
                 <li class = "navbar__item">
                     <a class = "navbar__link--active navbar__link" href = "./index.html">Biography</a>
                 </li>
-                <li>
+                <li class = "navbar__second-item">
                     <a class = "navbar__link" href = "">Shows</a>
                 </li>
             </ul>
         </nav>
+    </header>
+    <main>
+        <section class = "hero-section">
         <div class = "hero-logo">
             <h2 class = "hero-title">The Bees Knees</h2>
         </div>
-    </header>
-    <main>
+        </section>
         <section class = "about-quote">
             <h2 class = "about-quote__title">About the Musicians</h2>
             <img class = "about-quote__image" src = "./assets/images/band.jpg">
