add responsive feature navbar and add hero and quote sections

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class = "navbar">
             <div class = "navbar__title-container">
-                <a href = "./index.html"><img src = "./assets/logos/Logo-bandsite.svg" alt = "bandsite logo"></a>
+                <a href = "./index.html"><img class = "navbar__title-container-logo" src = "./assets/logos/Logo-bandsite.svg" alt = "bandsite logo"></a>
             </div>
             <ul class = "navbar__list">
                 <li class = "navbar__item">
@@ -25,18 +25,20 @@
     </header>
     <main>
         <section class = "hero-section">
-        <div class = "hero-logo">
+        <div>
             <h2 class = "hero-title">The Bees Knees</h2>
         </div>
         </section>
         <section class = "about-quote">
             <h2 class = "about-quote__title">About the Musicians</h2>
-            <img class = "about-quote__image" src = "./assets/images/band.jpg">
-            <p class = "about-quote__by-vocalist">"We push each other to be the best.
+            <div class = "about-quote__container">
+                <img class = "about-quote__image" src = "./assets/images/band.jpg">
+                <p class = "about-quote__by-vocalist">"We push each other to be the best.
                 It's not uncommon for one of us to say 'this needs to be better,
                 back to the drawing board'"
-            </p>
-            <p class = "about-quote__vocalist-name">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+                </p>
+                <p class = "about-quote__vocalist-name">- Bryan Teddy, lead vocalist of The Bees Knees</p>
+            </div>
         </section>
         <article class = "about-musicians">
             <h3 class = "about-musicians__title">The Bees Knees</h3>
