--- a/index.html
+++ b/index.html
@@ -40,35 +40,62 @@
                 <p class = "about-quote__vocalist-name">- Bryan Teddy, lead vocalist of The Bees Knees</p>
             </div>
         </section>
-        <article class = "about-musicians">
+        <seciton class = "about-musicians">
             <h3 class = "about-musicians__title">The Bees Knees</h3>
-            <p class = "about-musicians__paragraph">The Bees Knees is a pop rock band originating from San Francisco, California. 
-                The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
-                bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, 
-                drawing attention from manager Cam Adams. Having worked with other popular acts 
-                (The Elephant In The Room, One Trick Pony, The Cat's Meow), Adams was confident the band could succeed even further, 
-                pushing them to sign with Magenta Records.
-            </p>
-            <p class = "about-musicians__paragraph__two">From there, the band has soared, 
-                gaining international recognition and ranking in the top 10 on the Poster Charts. 
-                New fans immediately fell in love with the band's original and organic attitude, 
-                solidifying their place as one of the hottest and fastest up and coming acts of this century. 
-                Fans affectionately refer to themselves as "The Hive" and are drawn to their candid and authentic performances on stage. 
-                Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, 
-                looking to be released in late 2021.
-            </p>
-        </article>
-        <section class = "gallery-section">
-            <h2 class = "gallery-section__title">Photo Gallery</h2>
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-1.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-2.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-3.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-4.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-5.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-6.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-7.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-8.jpg">
-            <img class = "gallery-section__image" src = "./assets/images/Photo-gallery-9.jpg">
+        </seciton>
+        <section class = "paragraph-section">
+            <div class = "paragraph">
+                <p>The Bees Knees is a pop rock band originating from San Francisco, California. 
+                    The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
+                    bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, 
+                    drawing attention from manager Cam Adams. Having worked with other popular acts 
+                    (The Elephant In The Room, One Trick Pony, The Cat's Meow), Adams was confident the band could succeed even further, 
+                    pushing them to sign with Magenta Records.
+                </p>
+            </div>
+            <div class = "paragraph">
+                <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. 
+                    New fans immediately fell in love with the band's original and organic attitude, 
+                    solidifying their place as one of the hottest and fastest up and coming acts of this century. 
+                    Fans affectionately refer to themselves as "The Hive" and are drawn to their candid and authentic performances on stage. 
+                    Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, 
+                    looking to be released in late 2021.
+                </p>
+            </div>
+        </section>
+        <section class = "photo-gallery-section">
+            <div>
+                <h2 class = "photo-title">Photo Gallery</h2> 
+            </div>
+            <section class = "gallery">
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-1.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-2.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-3.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-4.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-5.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-6.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-7.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-8.jpg">
+                </div>
+                <div class = "gallery__item">
+                    <img class = "gallery__image" src = "./assets/images/Photo-gallery-9.jpg">
+                </div>
+            </section>
         </section>
     </main>
     <footer>
