--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class = "hero-section">
         <div>
-            <h2 class = "hero-title">The Bees Knees</h2>
+            <h1 class = "hero-title">The Bees Knees</h1>
         </div>
         </section>
         <section class = "about-quote">
@@ -99,7 +99,56 @@
         </section>
     </main>
     <footer>
-
+        <section class = "social-section">
+            <h2 class = "social-section__title">Get in Touch</h2>
+        </section>
+        <div class = "social-links">
+                <a href = "http://www.instagram.com"><img class = "social-links__image" src = "./assets/icons/Icon-instagram.svg" alt = "Instagram"></a>
+                <a href = "http://www.facebook.com"><img class = "social-links__image" src = "./assets/icons/Icon-facebook.svg" alt = "Facebook"></a>
+                <a href = "http://www.twitter.com"><img class = "social-links__image" src = "./assets/icons/Icon-twitter.svg" alt = "Twitter"></a>
+        </div>
+        </section>
+        <section class = "bandsite-agents-info">
+            <div>
+                <h3 class = "bandsite-agents-info__name">Cam Adams</h3>
+                <h3 class = "bandsite-agents-info__title">The Bees Knees Management</h3>
+                <div class = "bandsite-agents-info__address">
+                    <p class = "bandsite-agents-info__address__one">503 Broadway Penthouse,</p>
+                    <p class = "bandsite-agents-info__address__two">New York, NY 10012, USA</p>
+                </div>
+                <div class = bandsite-agents-info__email>
+                    <p>info@thebeesknees.com</p>
+                </div>
+            </div>
+            <div>
+            <h3 class = "bandsite-agents-info__name">Pearl Gregg</h3>
+            <h3 class = "bandsite-agents-info__title">Limitless Artist Group</h3>
+            <div class = "bandsite-agents-info__address">
+                <p class = "bandsite-agents-info__address__one">Booking Agent for</p>
+                <p class = "bandsite-agents-info__address__two">US/South America/Japan</p>
+            </div>
+            <div class = "bandsite-agents-info__email">
+                <p>pearl.gregg@limitlessag.com</p>
+            </div>
+            </div>
+            <div>
+            <h3 class = "bandsite-agents-info__name">Carson Whyte</h3>
+            <h3 class = "bandsite-agents-info__title">ARCH Entertainment</h3>
+            <div class = "bandsite-agents-info__address">
+                <p class = "bandsite-agents-info__address__one">Booking Agent for</p>
+                <p class = "bandsite-agents-info__address__two">UK/EU/AU</p>
+            </div>
+            <div class = "bandsite-agents-info__email">
+                <p>cwhyte@archentertainment.com</p>
+            </div>
+            </div>
+        </section>
+        <section class = "bandsite-title">
+            <a href = "./index.html"><img class = "bandsite-title__logo" src = "./assets/logos/Logo-bandsite.svg" alt = "bandsite logo"></a>
+        </section>
+        <section class = "copyright-section">
+            <p>Copyright The Bees Knees &copy; 2021 All Rights Reserved</p>
+        </section>
     </footer>
 </body>
 </html>
