--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
             <div class = "navbar__title-container">
                 <a href = "./index.html"><img class = "navbar__title-container-logo" src = "./assets/logos/Logo-bandsite.svg" alt = "bandsite logo"></a>
             </div>
-            <ul class = "navbar__list">
-                <li class = "navbar__item">
+            <div class = "navbar__list">
+                <div class = "navbar__item">
                     <a class = "navbar__link--active navbar__link" href = "./index.html">Biography</a>
-                </li>
-                <li class = "navbar__second-item">
+                </div>
+                <div class = "navbar__second-item">
                     <a class = "navbar__link" href = "">Shows</a>
-                </li>
-            </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section class = "hero-section">
-        <div>
-            <h1 class = "hero-title">The Bees Knees</h1>
-        </div>
+            <div>
+                <h1 class = "hero-section__title">The Bees Knees</h1>
+            </div>
         </section>
         <section class = "about-quote">
             <h2 class = "about-quote__title">About the Musicians</h2>
@@ -42,9 +42,9 @@
         </section>
         <seciton class = "about-musicians">
             <h3 class = "about-musicians__title">The Bees Knees</h3>
-        </seciton>
+        </section>
         <section class = "paragraph-section">
-            <div class = "paragraph">
+            <div class = "paragraph-section__paragraph-left">
                 <p>The Bees Knees is a pop rock band originating from San Francisco, California. 
                     The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
                     bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, 
@@ -53,7 +53,7 @@
                     pushing them to sign with Magenta Records.
                 </p>
             </div>
-            <div class = "paragraph">
+            <div class = "paragraph-section__paragraph-right">
                 <p>From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. 
                     New fans immediately fell in love with the band's original and organic attitude, 
                     solidifying their place as one of the hottest and fastest up and coming acts of this century. 
