entered comment array and comment form

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             <form id="user" action = "" method = "GET">
                 <label for = "fullname">Name</label>
                 <input type = "text" id = "fullname" name = "full_name" placeholder = "Enter your name"><br />
+  
+               
                 <label for = "comment">Comment</label>
                 <textarea type = "text" id = "comment" name = "comments" placeholder="Add a new comment"></textarea><br />
 
@@ -113,7 +115,9 @@
 
             </form>
         </section>    
-        <section class = "comment-section" id = "comment-section"></section> 
+        <section class = "comment-container">
+            <!-- this is the comments entered container -->
+        </section> 
     </main>
     <footer>
         <section class = "social-section">
