style the comments entered section

--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
                 </div>
             </div>
         </section>    
-        <section class = "comment-container">
+        <section class = "comment-entered-section">
             <!-- this is the comments entered container -->
+    
         </section> 
     </main>
     <footer>
