--- a/pages/shows.html
+++ b/pages/shows.html
@@ -40,7 +40,9 @@
                 <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/106182877&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
             </div>
         </section>
-        <section class = "buy-tickets-section"></section>
+        <section class = "buy-tickets-section">
+            <h2 class = "show-title">Shows</h2>
+        </section>
     </main>
     <footer>
         <section class = "social-section">
