--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/bio.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src = "./scripts/index-page.js" defer></script>
     <title>Bandsite - Biography</title>
 </head>
@@ -118,7 +119,6 @@
         </section>    
         <section class = "comment-entered-section">
             <!-- this is the comments entered container -->
-    
         </section> 
     </main>
     <footer>
