add date format to comments section and add show dates to show page

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                 <div class = "form-section__user-pic">
                     <img class = "form-section__user-pic__image" src = "./assets/images/Mohan-muruge.jpg">
                 </div>
-                <div class = "form-section__form-container">
-                    <form id="user" action = "" method = "GET">
-                        <label for = "fullname">NAME</label>
-                        <input type = "text" id = "fullname" name = "full_name" placeholder = "Enter your name"><br />
-                        <label for = "comment">COMMENT</label>
-                        <textarea type = "text" id = "comment" name = "comments" placeholder="Add a new comment"></textarea><br />
-                        <button id = "submitButton" type = "submit">COMMENT</button>
+                <div class = "form-section__container">
+                    <form id="form-section__container__user" action = "" method = "GET">
+                        <label for = "form-section__container__fullname">NAME</label>
+                        <input type = "text" id = "form-section__container__fullname" name = "full_name" placeholder = "Enter your name"><br />
+                        <label for = "form-section__container__comment">COMMENT</label>
+                        <textarea type = "text" id = "form-section__container__comment" name = "comments" placeholder="Add a new comment"></textarea><br />
+                        <button id = "form-section__container__submitButton" type = "submit">COMMENT</button>
                     </form>
                 </div>
             </div>
