--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                     <img class = "form-section__user-pic__image" src = "./assets/images/Mohan-muruge.jpg">
                 </div>
                 <div class = "form-section__container">
-                    <form id="form-section__container__user" action = "" method = "GET">
+                    <form class = "form-section__container__user" action = "" method = "GET">
                         <label for = "form-section__container__fullname">NAME</label>
-                        <input type = "text" id = "form-section__container__fullname" name = "full_name" placeholder = "Enter your name"><br />
+                        <input type = "text" class = "form-section__container__fullname" name = "full_name" placeholder = "Enter your name"><br />
                         <label for = "form-section__container__comment">COMMENT</label>
-                        <textarea type = "text" id = "form-section__container__comment" name = "comments" placeholder="Add a new comment"></textarea><br />
-                        <button id = "form-section__container__submitButton" type = "submit">COMMENT</button>
+                        <textarea type = "text" class = "form-section__container__comment" name = "comments" placeholder="Add a new comment"></textarea><br />
+                        <button class = "form-section__container__submitButton" type = "submit">COMMENT</button>
                     </form>
                 </div>
             </div>
