--- a/pages/shows.html
+++ b/pages/shows.html
@@ -32,18 +32,15 @@
                 <h2 class = "hero-section__album">Beautiful Beasts Album</h2>
             </div>
             <div>
-                <h1 class = "hero-section__title">Queen of Yellow x</h1>
+                <h1 class = "hero-section__title">Queen of Yellow x<br>For The Stings</h1>
             </div> 
-            <div>  
-                <h1 class = "hero-section__title-two">For The Stings</h1>
+            <div class = "hero-section__soundcloud-song">
+                <iframe scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/106182877&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
             </div>
-            <div class = "soundcloud-song">
-                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/106182877&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/erasedtapes" title="Erased Tapes" target="_blank" style="color: #cccccc; text-decoration: none;">Erased Tapes</a> · <a href="https://soundcloud.com/erasedtapes/nils-frahm-says" title="Nils Frahm - Says" target="_blank" style="color: #cccccc; text-decoration: none;">Nils Frahm - Says</a></div>
-            </div>
+            <!--width="100%" height="100"-->
         </section>
-        <section class = "buy-tickets-section">
-            <h2 class = "show-title">Shows</h2>
-        </section>
+        <h2 class = "show-title">Shows</h2>
+        <section class = "buy-tickets-section"></section>
     </main>
     <footer>
         <section class = "social-section">
